--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
       <artifactId>cglib</artifactId>
       <version>${cglib.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>2.0.7.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
